// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorItem renders  should be disabled 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Button)
        className="buttonBase"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
      >
        <pure(RadioButtonUncheckedIcon)
          className="authorLinkIcon"
          color="secondary"
        />
        Test user
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(Typography)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`AuthorItem renders  should be linked 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Button)
        className="buttonBase"
        disabled={true}
        fullWidth={true}
      >
        <pure(LinkIcon)
          className="authorLinkIcon"
        />
        Test user
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(Typography)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`AuthorItem renders  should be linked and disabled 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Button)
        className="buttonBase"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
      >
        <pure(RadioButtonUncheckedIcon)
          className="authorLinkIcon"
          color="secondary"
        />
        Test user
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(Typography)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`AuthorItem renders  should be selected 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Button)
        className="buttonBase"
        disabled={false}
        fullWidth={true}
      >
        <pure(RadioButtonCheckedIcon)
          className="authorLinkIcon"
          color="primary"
        />
        Test user
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(Typography)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`AuthorItem renders  should be selected and disabled 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Button)
        className="buttonBase"
        disabled={true}
        fullWidth={true}
      >
        <pure(RadioButtonCheckedIcon)
          className="authorLinkIcon"
          color="primary"
        />
        Test user
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(Typography)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`AuthorItem renders  should be unselected and able to select author 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Button)
        className="buttonBase"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
      >
        <pure(RadioButtonUncheckedIcon)
          className="authorLinkIcon"
          color="secondary"
        />
        Test user
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(Typography)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`AuthorItem renders  should have a proper style generator 1`] = `
Object {
  "authorLinkIcon": Object {
    "marginRight": 10,
  },
  "authorOrder": Object {
    "marginBottom": 20,
    "marginLeft": 60,
  },
  "buttonBase": Object {
    "justifyContent": "flex-start",
  },
}
`;
